# Copyright (C) 2013 Alexander Berntsen <alexander@plaimi.net>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

## Process this file with automake to produce Makefile.in

limbs_off_includedir = ${includedir}/

limbs_off_include_HEADERS = \
	repeat.hxx \
	config_parser.hxx \
	get_font.hxx \
	step_timer.hxx \
	template_math.hxx \
	template_math_inl.hxx \
	geometry.hxx \
	geometry_inl.hxx \
	physics.hxx \
	physics_inl.hxx \
	game_physics.hxx \
	graphics.hxx \
	game_graphics_gl.hxx \
	event_code.hxx \
	screen_element.hxx \
	menu.hxx \
	event_handler.hxx \
	collision_handler.hxx \
	character.hxx \
	action.hxx \
	actor.hxx \
	player.hxx \
	game.hxx \
	game_loop.hxx
